# api/openapi/src/openapi.yaml
@@ -67,6 +67,21 @@ paths:
                 $ref: "#/components/schemas/AuthenticationResponse"
 
   /users:
+    get:
+      tags:
+        - users
+      summary: Get Users.
+      description: ユーザー一覧情報取得
+      operationId: GetUsers
+      responses:
+        "200":
+          description: A list User model
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/User"
     post:
       tags:
         - users
@@ -102,8 +117,6 @@ paths:
           required: true
           schema:
             type: integer
-      security:
-        - BearerAuth: []
       responses:
         "200":
           description: A single User model
